--- a/html_template/shell_minimal.html
+++ b/html_template/shell_minimal.html
@@ -56,20 +56,21 @@
     <div class="emscripten_border">
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
     </div>
-    <!--
-    <hr/>
+
+<!--
+     <hr/>
     <div class="emscripten">
       <input type="checkbox" id="resize">Resize canvas
       <input type="checkbox" id="pointerLock" checked>Lock/hide mouse pointer
       &nbsp;&nbsp;&nbsp;
       <input type="button" value="Fullscreen" onclick="Module.requestFullscreen(document.getElementById('pointerLock').checked, 
                                                                                 document.getElementById('resize').checked)">
-    </div>
-    
+    </div> -->
     <hr/>
     <textarea class="emscripten" id="output" rows="8"></textarea>
     <hr>
-  -->
+  
+
     <script type='text/javascript'>
       var statusElement = document.getElementById('status');
       var progressElement = document.getElementById('progress');
