--- a/html_template/shell_minimal.html
+++ b/html_template/shell_minimal.html
@@ -65,8 +65,8 @@
       &nbsp;&nbsp;&nbsp;
       <input type="button" value="Fullscreen" onclick="Module.requestFullscreen(document.getElementById('pointerLock').checked, 
                                                                                 document.getElementById('resize').checked)">
-    </div> -->
-    <hr/>
+    </div> 
+    <hr/>-->
     <textarea class="emscripten" id="output" rows="8"></textarea>
     <hr>
   
