--- a/html_template/shell_minimalJS.html
+++ b/html_template/shell_minimalJS.html
@@ -55,8 +55,8 @@
   </head>
   <body>
     <h2>Steady-state Advection-Diffusion Solver</h2>
-    <div class="text1">To see this demo you will need to use a modern browser which supports WebAssembly; feel free to  
-      try the &nbsp;<a href="ConvDiff2dJS.html">JavaScript version</a>&nbsp; if nothing appears below.</div>
+    <div class="text1">This is the JavaScript version;
+      a &nbsp;<a href="ConvDiff2d.html">WebAssembly version</a>&nbsp; is also available.</div>
     <div class="text1"><b>CLICK</b>&nbsp; or &nbsp;<b>CLICK AND DRAG</b>&nbsp; to alter the flow velocity.</div>
       <div class="text1">(<b>TOUCH</b>&nbsp; or &nbsp;<b>TOUCH AND DRAG</b>&nbsp; on touch-enabled devices.)</div>
         <div class="text1">The code for this demo is available on &nbsp;<a href="https://github.com/ryanden2018/ConvDiff2d/" target="_blank">GitHub</a>.</div>
