--- a/html_template/shell_minimal.html
+++ b/html_template/shell_minimal.html
@@ -55,6 +55,7 @@
   </head>
   <body>
     <h2>Steady-state Advection-Diffusion Solver</h2>
+    <div class="text1"><i>Ryan Denlinger</i></div>
     <div class="text1">To see this demo you will need to use a modern browser which supports WebAssembly; feel free to  
       try the &nbsp;<a href="ConvDiff2dJS.html">JavaScript version</a>&nbsp; if nothing appears below.</div>
     <div class="text1"><b>CLICK</b>&nbsp; or &nbsp;<b>CLICK AND DRAG</b>&nbsp; to alter the flow velocity.</div>
