--- a/html_template/shell_minimalJS.html
+++ b/html_template/shell_minimalJS.html
@@ -55,6 +55,7 @@
   </head>
   <body>
     <h2>Steady-state Advection-Diffusion Solver</h2>
+    <div class="text1"><i>Ryan Denlinger</i></div>
     <div class="text1">This is the JavaScript version;
       a &nbsp;<a href="ConvDiff2d.html">WebAssembly version</a>&nbsp; is also available.</div>
     <div class="text1"><b>CLICK</b>&nbsp; or &nbsp;<b>CLICK AND DRAG</b>&nbsp; to alter the flow velocity.</div>
