energy, mass indicators

--- a/html_template/shell_minimal.html
+++ b/html_template/shell_minimal.html
@@ -124,7 +124,7 @@ The right-hand side is given by the following formula:</div>
 <div class="text2">To compute the derivatives appearing in the residual, high-order finite difference formulas are applied to the 
   solution values evaluated at points which are chosen away from cell boundaries.
 </div>-->
-<div class="text2">The DG solver is written in C++, using  &nbsp;<a href="https://emscripten.org/" target="_blank">Emscripten</a>&nbsp; to compile 
+<div class="text2">The solver is written in C++, using  &nbsp;<a href="https://emscripten.org/" target="_blank">Emscripten</a>&nbsp; to compile 
 down to WebAssembly.</div>
 
     <script type='text/javascript'>
